# anki-mcp

./: README.md  README.org  TODO.md  pyproject.toml  test_add_cards.py
src/anki_mcp/: client.py  main.py  models.py
src/anki_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_anki_integration.py
